Fixed alignment issues

--- a/main.css
+++ b/main.css
@@ -109,7 +109,7 @@ list-style-type: disc;
 	#height:400px;
 	top:180px;
 	position:relative;
-	z-index:1;
+	#z-index:1;
 	#overflow:scroll;
 	#top:6px;
 	#margin-left:auto;
@@ -122,10 +122,11 @@ list-style-type: disc;
 	width:100%;
 	height:80px;
 	#top:relative;
-	position:fixed;
-	bottom:0px;
-	margin-left:auto;
-	margin-right:auto;
-	z-index:20000;
+	position:relative;
+	#clear:both;
+	#bottom:0px;
+	#margin-left:auto;
+	#margin-right:auto;
+	#z-index:22000;
 	color:white;
 }
